--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <div class="carousel-item active"> 
         <img class="d-block mx-auto img-fluid" src="images/Fish.jpeg" alt="First slide">
         <div class="carousel-caption">
-          <h1>bhsbfjsefefgjefhjfejfgefjg</h1>
+          <h1>welcome to A /h1>
           <p>.dmkllekflejflewfjl</p>
         </div>
       </div>
-      <div class="carousel-item"> <img class="d-block mx-auto img-fluid" src="images/lion-king-african-silhouette.jpg" alt="Second slide">
+      <div class="carousel-item"> <img class="d-block mx-auto img-fluid" src="images/bugarti.jpeg"" alt="Second slide">
         <div class="carousel-caption">
           <h5>Second slide Heading</h5>
           <p>Second slide Caption</p>
