--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div class="carousel-item active"> 
         <img class="d-block mx-auto img-fluid" src="images/Fish.jpeg" alt="First slide">
         <div class="carousel-caption">
-          <h1>welcome to A /h1>
-          <p>.dmkllekflejflewfjl</p>
+          <h1>welcome to Aquarium of Fish/h1>
+          <p>Take a Close Look at Aqua world</p>
         </div>
       </div>
       <div class="carousel-item"> <img class="d-block mx-auto img-fluid" src="images/bugarti.jpeg"" alt="Second slide">
